--- a/index.html
+++ b/index.html
@@ -435,6 +435,8 @@
          <p class="footer__copy">&copy;2015 Axure Themes</p>
       </div>
    </footer>
+   
+   /////////проверка/////////
 
    <script src="JS/js.js"></script>
 </body>
